--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,40 @@ a:hover {
 	margin: 0 auto;
 }
 
-.grids div {
-	background-color: red;
+.grids .grid_style {
+	height: 280px;
+}
+
+.grids .shopping_body {
+	position: relative;
+	top: -240px;
+}
+
+.grids .shopping_body h2 {
+	margin-left: 15px;
+	font-size: 50px;
+	text-transform: uppercase;
+	font-family: Georgia, serif;
+	color: #2792DD;
+}
+
+.grids .shopping_body p {
+	margin-left: 15px;
+	font-size: 25px;
+	font-family: Georgia, serif;
+	color: #555;
+}
+
+.grids .shopping_body button {
+	margin-left: 15px;
+	border: 1px solid #555;
+	background-color: transparent;
+	border-radius: 4px;
+	padding: 3px 10px;
+}
+
+.grids .shopping_body button:hover {
+	background-color: #2792DD;
+	border: none;
+	color: #fff;
 }
